# sattelclub

./: .gitignore  Cargo.toml  response-test.html  response.html  sattelclub.toml
src/: config.rs  main.rs  request.rs  runner.rs  state.rs
src/config/: path.rs  sattelclub.default.toml  strava.rs  user.rs
src/request/: groupride_response.rs
src/strava/: client.rs  mod.rs  scraper.rs  signup.rs
