[package]
name = "sattelclub"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
directories = "6.0.0"
reqwest = { version = "0.12.22", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.8.23"
