[package]
name = "sattelclub"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
directories = "6"
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
